tests/paczka1/fuzzy1/39488904.err
Error in line 11: Mv0F S174 92,3
Error in line 15: VMxs S982 12,0
Error in line 14: Mv0F A40 34,7
Error in line 19: Mv0F S174 16,1
Error in line 30: VMxs S982 22,6
Error in line 29: DhKHjkzsDl S174 1,9
Error in line 33: uKb S982 96,2
